<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AutopsyActivity" >
	
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Autopsies"
        android:textSize="24sp" />

    <Button
        android:id="@+id/Button_gun"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/gun"
        android:layout_below="@+id/textView1"
        android:text="@string/gun"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:onClick="goCheckList1" />

    <Button
        android:id="@+id/Button_knife"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/knife"
        android:layout_below="@+id/Button_gun"
        android:text="@string/knife"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" 
        android:layout_marginBottom="4dp"
        android:onClick="goCheckList2"/>

    <Button
        android:id="@+id/Button_adult"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/adult"
        android:layout_below="@+id/Button_knife"
        android:text="@string/adult"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" 
        android:layout_marginBottom="4dp"
        android:onClick="goCheckList3"/>

    <Button
        android:id="@+id/Button_child"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/Button_adult"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/child"
        android:text="@string/child"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" 
        android:layout_marginBottom="4dp"
        android:onClick="goCheckList4"/>
    
    <Button
        android:id="@+id/Button_crash"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/Button_child"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/crash"
        android:text="@string/crash"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" 
        android:layout_marginBottom="4dp"
        android:onClick="goCheckList5"/>
    <Button
        android:id="@+id/Button_asphyxia"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/Button_crash"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/asphyxia"
        android:text="@string/asphyxia"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" 
        android:layout_marginBottom="4dp"
        android:onClick="goCheckList6"/>
    
    <Button
        android:id="@+id/Button_burn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/Button_asphyxia"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/fire"
        android:text="@string/burn"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" 
        android:layout_marginBottom="4dp"
        android:onClick="goCheckList7"/>

</RelativeLayout>