<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AutopsyActivity" >
	
    <TextView
        android:id="@+id/textViewtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_an_option"
        android:textSize="24sp" />

    <Button
        android:id="@+id/Button_phorensic"
        android:layout_width="fill_parent"
        android:layout_centerVertical="true"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/autopsy"
        android:layout_below="@+id/Button_checklists"
        android:text="@string/Autopsies"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" 
        android:layout_marginBottom="15dp"
        android:onClick="goPhorensicChecklist"/>

    <Button
        android:id="@+id/Button_checklists"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textViewtitle"
        android:layout_below="@+id/textViewtitle"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/health"
        android:onClick="goPhorensic"
        android:text="@string/PhorensicClinic"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>
